# PhysicsEngineRepo

./: .config  .gitignore  .main.c.swp  CMakeLists.txt  README.md  a.out  animator.c  animator.h  coordinate_system.ppm  coordinate_system_0.ppm  frame_drawer.c  frame_drawer.h  general_animation_util.c  general_animation_util.h  main_tester.c
Animation_Library_V0_1_0/: CMakeLists.txt  Java_CLI_Handler.c  animator.c  animator.h  command_line_interface.c  frame_drawer.c  frame_drawer.h  main_tester.c
Animation_Library_V0_1_0/AnimationTesting/: TestSuite.c
Animation_Library_V0_1_0/build_files/: AnimationLibrary  AnimationLibraryTester  CMakeCache.txt  Makefile  cmake_install.cmake  libjava_cli_handler.dylib
Engine_v0_11/: Animate.c  CMakeLists.txt  UniverseHandler.c  main.c
Engine_v0_11/Playground/: PPM_INTERMEDIATE_TESTING.c
Engine_v0_11/Simulations/: Earth_Human_Gravity.psim
Engine_v0_11/SimulationsSource/: EarthGravity.c
Engine_v0_11/UnitTests/: CMakeLists.txt  Simulation_Handler_Tester.c  Simulation_Handler_Tester.h  UniverseHandlerTester.c
Engine_v0_11/build_files/: CMakeCache.txt  Engine  Makefile  cmake_install.cmake
Engine_v0_11/include/: Animate.h  Simulation_Handler.h  UNIVERSAL_CONSTANTS.h  UniverseHandler.h  Utility.h
Engine_v0_11/src/: Animate.c  Simulation_Handler.c  UniverseHandler.c
Physics_Engine_v0_0_1/: CMakeLists.txt
Physics_Engine_v0_0_1/DO_NOT_BUILD_SRC/: Animate.h
Physics_Engine_v0_0_1/Playground/: a.out  typeTesting.c
Physics_Engine_v0_0_1/Simulations/: Earth_Human_Gravity.psim
Physics_Engine_v0_0_1/SimulationsSource/: EarthGravity.c
Physics_Engine_v0_0_1/UnitTests/: CMakeLists.txt  Note.txt  Simulation_Handler_Tester.c
Physics_Engine_v0_0_1/build_files/: CMakeCache.txt  Engine  Makefile  cmake_install.cmake
Physics_Engine_v0_0_1/include/: UniverseHandler.h
Physics_Engine_v0_0_1/src/: Simulation_Handler.c  (+2 more)
build_files/: AnimationLibrary  CMakeCache.txt  Makefile  cmake_install.cmake
simulation_files/: Earth_Human_Gravity.psim
tested_coordinate_systems/: coordinate_system_0.ppm  coordinate_system_1.ppm  coordinate_system_2.ppm  coordinate_system_3.ppm  coordinate_system_4.ppm  coordinate_system_5.ppm
(+67 files in other folders)
